# controllers/contactController.js
@@ -2,30 +2,30 @@ const mongodb = require("../data/database");
 const ObjectId = require("mongodb").ObjectId;
 
 const getAll = async (req, res) => {
-  //#swagger.tags=["Users"]
-  const result = await mongodb.getDatabase().db().collection("users").find();
-  result.toArray().then((users) => {
+  //#swagger.tags=["Contacts"]
+  const result = await mongodb.getDatabase().db().collection("Contacts").find();
+  result.toArray().then((Contacts) => {
     res.setHeader("content-type", "application/json");
-    res.status(200).json(users);
+    res.status(200).json(Contacts);
   });
 };
 
 const getOne = async (req, res) => {
-  //#swagger.tags=["Users"]
+  //#swagger.tags=["Contacts"]
   const userId = new ObjectId(req.params.id);
   const result = await mongodb
     .getDatabase()
     .db()
-    .collection("users")
+    .collection("Contacts")
     .find({ _id: userId });
-  result.toArray().then((users) => {
+  result.toArray().then((Contacts) => {
     res.setHeader("content-type", "application/json");
-    res.status(200).json(users[0]);
+    res.status(200).json(Contacts[0]);
   });
 };
 
 const createContact = async (req, res) => {
-  //#swagger.tags=["Users"]
+  //#swagger.tags=["Contacts"]
   const contact = {
     firstName: req.body.firstName,
     lastName: req.body.lastName,
@@ -37,7 +37,7 @@ const createContact = async (req, res) => {
   const reponse = await mongodb
     .getDatabase()
     .db()
-    .collection("users")
+    .collection("Contacts")
     .insertOne(contact);
 
   if (reponse.acknowledged) {
@@ -50,7 +50,7 @@ const createContact = async (req, res) => {
 };
 
 const updateContact = async (req, res) => {
-  //#swagger.tags=["Users"]
+  //#swagger.tags=["Contacts"]
   const userId = new ObjectId(req.params.id);
   const contact = {
     firstName: req.body.firstName,
@@ -63,7 +63,7 @@ const updateContact = async (req, res) => {
   const reponse = await mongodb
     .getDatabase()
     .db()
-    .collection("users")
+    .collection("Contacts")
     .replaceOne({ _id: userId }, contact);
 
   if (reponse.modifiedCount > 0) {
@@ -76,13 +76,13 @@ const updateContact = async (req, res) => {
 };
 
 const deleteContact = async (req, res) => {
-  //#swagger.tags=["Users"]
+  //#swagger.tags=["Contacts"]
   const userId = new ObjectId(req.params.id);
 
   const reponse = await mongodb
     .getDatabase()
     .db()
-    .collection("users")
+    .collection("Contacts")
     .deleteOne({ _id: userId });
 
   if (reponse.deletedCount > 0) {
